--- a/ansible/roles/nginx/mandala/master-api/templates/mandala-master-api.conf.j2
+++ b/ansible/roles/nginx/mandala/master-api/templates/mandala-master-api.conf.j2
@@ -7,7 +7,7 @@ proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header   Host $http_host;
 
 upstream mandala-master-api {
-  server 127.0.0.1:19000;
+  server 127.0.0.1:{{ mandala_master_api_port }};
 }
 
 server {
