nginx関連の見直しとサーバのメンテナンス

--- a/ansible/roles/nginx/mandala/master-api/templates/mandala-master-api.conf.j2
+++ b/ansible/roles/nginx/mandala/master-api/templates/mandala-master-api.conf.j2
@@ -1,11 +1,5 @@
 # mandala-master-api
 
-proxy_buffering    off;
-proxy_set_header   X-Real-IP $remote_addr;
-proxy_set_header   X-Scheme $scheme;
-proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-proxy_set_header   Host $http_host;
-
 upstream mandala-master-api {
   server 127.0.0.1:{{ mandala_master_api_port }};
 }
@@ -13,9 +7,10 @@ upstream mandala-master-api {
 server {
   listen 80;
   server_name {{ host_name }};
-  
-  access_log  /var/log/nginx/mandala-master-api/access.log ltsv;
-  error_log   /var/log/nginx/mandala-master-api/error.log warn;
+  servar_name_in_redirect off;
+
+  access_log  {{ nginx_log_dir }}/mandala-master-api/access.log ltsv;
+  error_log   {{ nginx_log_dir }}/mandala-master-api/error.log warn;
   
   location / {
     proxy_pass http://mandala-master-api;
