--- a/ansible/roles/nginx/templates/nginx.conf.j2
+++ b/ansible/roles/nginx/templates/nginx.conf.j2
@@ -2,7 +2,7 @@ user                  nginx;
 worker_processes      2;
 worker_rlimit_nofile  4096;
 
-error_log             /var/log/nginx/error.log warn;
+error_log             {{ nginx_log_dir }}/error.log warn;
 pid                   /var/run/nginx.pid;
 
 events {
@@ -42,6 +42,12 @@ http {
   sendfile          on;
   tcp_nopush        on;
 #  tcp_nodelay       on;
+
+  proxy_buffering    off;
+  proxy_set_header   X-Real-IP $remote_addr;
+  proxy_set_header   X-Scheme $scheme;
+  proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header   Host $http_host;
 
   include  {{ nginx_conf_dir }}/*.conf;
 }
